fix(blog): fix index page tag wrap

--- a/packages/blog/src/styles/globals.scss
+++ b/packages/blog/src/styles/globals.scss
@@ -130,6 +130,7 @@ img {
 
 [role="button"] {
   cursor: pointer;
+  word-break: keep-all;
   svg {
     fill: currentColor;
     height: 1em;
